Update test format (and clean up some places)

--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
     "koa": "^2.8.2",
     "koa-bodyparser": "^4.2.1",
     "koa-router": "^7.4.0"
+  },
+  "devDependencies": {
+    "ts-node": "^8.4.1",
+    "typescript": "^3.6.4"
   }
 }
