--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "koa-router": "^7.4.0"
   },
   "devDependencies": {
-    "ts-node": "^8.4.1",
+    "nodemon": "1.19.4",
+    "prettier": "1.19.1",
+    "ts-node": "8.5.2",
     "typescript": "^3.6.4"
   }
 }
