--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon --exec ts-node server.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "Cezar Grigore <grigorecezar@gmail.com>",
   "license": "ISC",
@@ -18,12 +18,19 @@
     "request-promise-native": "1.0.8"
   },
   "devDependencies": {
+    "@babel/core": "^7.7.2",
+    "@babel/preset-env": "^7.7.1",
+    "@babel/preset-typescript": "^7.7.2",
+    "@shopify/jest-koa-mocks": "2.1.9",
+    "@types/jest": "^24.0.23",
     "@types/koa": "^2.0.50",
-    "@types/koa__cors": "^2.2.3",
     "@types/koa-bodyparser": "^4.3.0",
     "@types/koa-router": "^7.0.42",
-    "@types/request-promise-native": "1.0.17",
+    "@types/koa__cors": "^2.2.3",
     "@types/request": "2.48.3",
+    "@types/request-promise-native": "1.0.17",
+    "babel-jest": "^24.9.0",
+    "jest": "^24.9.0",
     "nodemon": "1.19.4",
     "prettier": "1.19.1",
     "ts-node": "8.5.2",
